--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "normalize.css": "^8.0.1",
+    "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vue-socket.io": "^3.0.7",
+    "vue-socket.io-extended": "^4.0.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
