--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node server/app.js & vue-cli-service serve",
+    "start": "mongod  --quiet & node server/app.js & vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -16,7 +16,6 @@
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vue-socket.io": "^3.0.7",
     "vue-socket.io-extended": "^4.0.1",
     "vuex": "^3.1.2"
   },
