--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "face-api.js": "^0.22.2",
     "normalize.css": "^8.0.1",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.11",
