--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "mongod  --quiet & node server/app.js & vue-cli-service serve",
-    "createMockData": "node -e 'require(\"./server/app.js\").mockData()'",
+    "start": "node server/server.js & vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
